<resources>
    <string name="app_name">Magistify</string>
    <string name="app_ad_id">ca-app-pub-6508010163010980~3753590954</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_auto_silent">Auto-stil</string>
    <string name="title_appointments">Rooster</string>
    <string name="title_new_grades">Nieuwe cijfers</string>
    <string name="title_about">Over deze app</string>
    <string name="title_settings">Instellingen</string>
    <string name="title_donate">Doneren</string>
    <string name="title_shedule_changes">Roosterwijzigingen</string>
    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text">Magistify: alle tools voor Magister.<br /><b>Broncode:</b>
        <br /><a href="https://github.com/z3r0byte/magistify">github</a><br /><b>Licentie:</b><br />Apache 2.0
        <br /><br /> Magistify maakt gebruik van de volgende libraries (De magister.java library is aangepast):</string>
    <string name="banner_1_ad_unit_id">ca-app-pub-6508010163010980/5230324150</string>
    <string name="customactivityoncrash_error_activity_close_app">App sluiten</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Fouten-informatie</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Sluiten</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Gekopiëerd naar klembord</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Kopiëren naar klembord</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Details fouten</string>
    <string name="customactivityoncrash_error_activity_error_details">Fouten details</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">Er is een onverwachte fout opgetreden.\nVerstuur a.u.b. de foutgegevens naar de ontwikkelaar. z3r0byte.apps@gmail.com</string>
    <string name="customactivityoncrash_error_activity_restart_app">App opnieuw starten</string>
    <string name="customactivityoncrash_error_activity_unknown_exception">Onbekende fout</string>
    <string name="dialog_item_purchased_title">Let Op: Product al gekocht</string>
    <string name="dialog_item_purchased_desc">Je hebt dit product al gekocht, als je zeker weet dat je dit product weer gaat
    kopen, druk dan op Ok. \nWAARSCHUWING: als je op OK klikt, wordt je vorige aankoop verwijderd uit het systeem en moet
    je de aankoop nog een keer uitvoeren om de gekochte functies opnieuw te activeren! Als je dit niet doet heb je geen recht meer
    op de gekochte functies.</string>
    <string name="dialog_confirm_school_title">URL bevestigen</string>
    <string name="dialog_confirm_school_desc">Je hebt %1$s ingevoerd, is https://%2$s.magister.net de URL van jouw school? Let op:
        Als je de verkeerde URL hebt ingevoerd, kun je niet inloggen!</string>
    <string name="dialog_bug_title">Bug melden</string>
    <string name="dialog_bug_desc">Als je een fout wilt melden, kun je gewoon je telefoon op en neer schudden. De app maakt dan
        automatisch een screenshot en opent een mail venster. Hier kun je dan een korte beschrijving van de fout invullen.</string>
    <string name="dialog_login_failed_title">Inloggen mislukt</string>
    <string name="dialog_login_failed_desc">Meerdere login-pogingen van de app zijn mislukt. Het login-proces is afgebroken
        om te voorkomen dat je account geblokkeerd wordt. Dit kan komen omdat je wachtwoord veranderd is.
        \n\nWil je opnieuw inloggen?</string>
    <string name="dialog_manual_school_title">Handmatig invoeren</string>
    <string name="dialog_manual_school_desc">Voer de url van de school handmatig in. Voer alleen het gedeelte voor .magister.net
        in.\nVb: Als de url van je school https://commanderij.magister.net is, voer je alleen commanderij in.</string>
    <string name="dialog_pro_title">Magistify PRO functies</string>
    <string name="dialog_pro_body">Binnen magistify zijn er een aantal functies die pas beschikbaar zijn na aankoop. Waarom? Omdat het ontwikkelen van apps nou eenmaal geld en tijd kost. (Dat laatste vind ik zo erg nog niet :D) Die kosten moeten dus terug verdiend worden. Nou probeer ik om de belangrijkste functies gratis te houden en een paar extra functies betaald, maar \'belangrijk\' is natuurlijk voor iedereen anders. Nou snap ik dat je dit misschien irritant vindt, maar de andere optie zou zijn om de app vol advertenties te stoppen, maar daar zit ook niemand op te wachten. Mocht je deze PRO functies dus willen gebruiken, druk dan op \'doneren\' hieronder ;)\n\nBedankt!</string>
    <string name="drawer_logout">Log uit</string>
    <string name="drawer_refresh_session">Sessie verversen</string>
    <string name="report_bug">Bug melden</string>
    <string name="drawer_settings">Instellingen</string>
    <string name="drawer_status">Status</string>
    <string name="drawer_tools">Tools</string>
    <string name="err_purchase_cancalled">Aankoop geannuleerd door de gebruiker.</string>
    <string name="err_purchase_unkown">Onbekende fout tijdens verwerken aankoop.</string>
    <string name="err_fill_in_everything">Fout: Vul eerst alle velden in!</string>
    <string name="err_invalid_session">Ongeldige sessie…</string>
    <string name="err_no_connection">Er is iets misgegaan in de verbinding, controleer je internetverbinding.</string>
    <string name="err_no_lessons">Er zijn geen lessen gevonden</string>
    <string name="err_not_logged_in">Fout: je bent niet ingelogd.</string>
    <string name="err_terrible_wrong_on_login">Er is iets vreselijk misgegaan met het inloggen, log aub helemaal opnieuw in. :(</string>
    <string name="err_unknown">Er is een onbekende fout opgetreden, probeer het opnieuw.</string>
    <string name="err_wrong_username_or_password">Verkeerde gebruikersnaam of wachtwoord</string>
    <string name="hint_password">Wachtwoord</string>
    <string name="hint_search_school">Een deel van de naam/url van de school</string>
    <string name="hint_username">Gebruikersnaam</string>
    <string name="menu_delete">Verwijderen</string>
    <string name="msg_amount_found_part_1">Er zijn </string>
    <string name="msg_amount_found_part_2"> resultaten gevonden.</string>
    <string name="msg_annotation">Aantekening</string>
    <string name="msg_cancel">Annuleren</string>
    <string name="msg_deleted">Verwijderd</string>
    <string name="msg_description">Beschrijving</string>
    <string name="msg_details">Details</string>
    <string name="msg_duration">Duur</string>
    <string name="msg_exam">Examen</string>
    <string name="msg_finish">Afronden</string>
    <string name="msg_finished">Afgerond</string>
    <string name="msg_fix_login">Tik om op te lossen</string>
    <string name="msg_homework">Huiswerk</string>
    <string name="msg_info">Informatie</string>
    <string name="msg_last_edited">Laatst aangepast om: %1$s</string>
    <string name="msg_loading">Laden...</string>
    <string name="msg_loading_purchases">Aankopen inladen...</string>
    <string name="msg_location">Lokatie</string>
    <string name="msg_logged_in">Ingelogd</string>
    <string name="msg_logging_in">Inloggen…</string>
    <string name="msg_login_on_Magister">Log in op Magister</string>
    <string name="msg_login">Log in</string>
    <string name="msg_later">Later</string>
    <string name="msg_next_appointment">Volgende afspraak</string>
    <string name="msg_newest_grade">Nieuwste cijfer</string>
    <string name="msg_no_results">Er zijn (nog) geen resultaten, tik om handmatig in te voeren.</string>
    <string name="msg_no_appointments_today">Geen afspraken meer vandaag</string>
    <string name="msg_no_grade">Geen nieuw cijfer</string>
    <string name="msg_no_grade_short">-,-</string>
    <string name="msg_old_version">De data-structuur van Magistify is veranderd, we laten je daarom de login-stappen opnieuw doorlopen.</string>
    <string name="msg_oral">Mondeling</string>
    <string name="msg_patience">Even geduld aub</string>
    <string name="msg_period">Lesuur</string>
    <string name="msg_pro_functions">Deze instellingen horen bij de PRO functies, klik voor meer info</string>
    <string name="msg_purchase_successful">Aankoop successvol</string>
    <string name="msg_quiz">SO</string>
    <string name="msg_relogin">Opnieuw inloggen</string>
    <string name="msg_restart_app_to_apply">Herstart de app om de wijzigingen door te voeren</string>
    <string name="msg_school_selected">Naam van geselcteerde school: </string>
    <string name="msg_search_school">School zoeken</string>
    <string name="msg_search">Zoek</string>
    <string name="msg_searching">Zoeken…</string>
    <string name="msg_teacher">Docent</string>
    <string name="msg_test">Proefwerk</string>
    <string name="msg_to_today">Naar vandaag</string>
    <string name="setup_desc_1">Let op: Ouder-accounts zijn op dit moment nog niet ondersteund.</string>
    <string name="setup_desc_2">Magistify heeft toegang nodig tot de sdkaart om logbestanden en dergelijken op te slaan.</string>
    <string name="setup_desc_3">Magistify is GEEN volledige Magister app. Het biedt slechts handige tooltjes aan die andere apps
     niet hebben. Plaats dus aub geen reviews in de richting van "Ik kan niet al mijn cijfers zien!". Wie weet wordt Magistify
    ooit nog een volledige app, maar nu is hij dat nog niet.</string>
    <string name="setup_title_1">Welkom bij Magistify</string>
    <string name="setup_title_2">Permissies</string>
    <string name="setup_title_3">Even om onduidelijkheid te voorkomen:</string>
    <string name="setup_title_4"></string>
    <string name="setup_title_5"></string>
    <string name="snackbar_fix">Fix</string>
    <string name="snackbar_no_permissions">Geef Magistify aub de benodigde permissies</string>
    <string name="snackbar_no_perms_for_silent">Fout: de app heeft geen toegang tot de niet-storen functie</string>
    <string name="snackbar_no_school_selected">Selecteer eerst een school</string>
    <string name="snackbar_not_logged_in">Log eerst in</string>
    <string name="spinner_margin">Marge</string>
    <string name="switch_own_appointments">Eigen afspraken</string>
    <string name="switch_pass_grade_only">Alleen voldoendes weergeven</string>
    <string name="switch_reverse_silent_state">Terug naar vorige geluidsmodus</string>
    <string name="switch_toggle_auto_silent">Auto-stil inschakelen</string>
    <string name="switch_toggle_ads">Advertenties uitschakelen</string>
    <string name="switch_toggle_appointment_notification">Melding voor volgende afspraak\n(25 min. van te voren)</string>
    <string name="switch_toggle_new_grades">Melding bij nieuw cijfer inschakelen</string>
    <string name="switch_toggle_new_homework">Melding bij nieuw huiswerk</string>
    <string name="switch_toggle_unfinished_homework">Melding als je huiswerk voor de\nvolgende dag nog niet af hebt</string>
    <string name="title_activity_auto_silent">Magistify</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_grade">Magistify</string>
    <string name="title_activity_appointment">Magistify</string>
    <string name="msg_donations_desc">De genoemde bedragen zijn de bedragen die IK ontvang, de echte prijs zal hoger liggen in verband met belasting.\nBij elke donatie worden advertenties verwijderd. Donaties vanaf €1.00 ontgrendelen ook alle (toekomstige) PRO-functies.\nPrijzen zijn onder voorbehoud en excl. BTW.</string>
    <string name="msg_donate">Doneren</string>
    <string name="msg_upcoming_changes">Komende roosterwijzigingen</string>
    <string name="msg_no_upcoming_schedulechanges">Geen roosterwijzigingen de komende tijd</string>
    <string name="symbol_click">{gmd-chevron-right}</string>
</resources>