<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016-2017 Bas van den Boom 'Z3r0byte'
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.z3r0byte.magistify.AutoSilentActivity"
    tools:showIn="@layout/activity_auto_silent">

    <RelativeLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Switch
            android:textSize="18sp"
            android:text="@string/switch_toggle_auto_silent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="27dp"
            android:id="@+id/enable"
            android:switchPadding="12dp" />

        <Switch
            android:enabled="false"
            android:layout_below="@+id/enable"
            android:textSize="18sp"
            android:text="@string/switch_own_appointments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="27dp"
            android:id="@+id/own_appointments"
            android:switchPadding="12dp" />

        <RelativeLayout
            android:id="@+id/margin_layout"
            android:layout_below="@+id/own_appointments"
            android:layout_marginTop="27dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/text1"
                android:text="@string/spinner_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <Spinner
                android:clickable="false"
                android:layout_width="match_parent"
                android:layout_toRightOf="@id/text1"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/margin" />

        </RelativeLayout>

        <Switch
            android:enabled="false"
            android:layout_below="@+id/margin_layout"
            android:textSize="18sp"
            android:text="@string/switch_reverse_silent_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="27dp"
            android:id="@+id/reverse_state"
            android:switchPadding="12dp" />

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
