<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016-2017 Bas van den Boom 'Z3r0byte'
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.z3r0byte.magistify.DashboardActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/Toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:theme="@style/ToolBarStyle" />


    <com.z3r0byte.magistify.GUI.ScrollRefreshLayout
        android:layout_above="@+id/adView"
        android:layout_below="@+id/Toolbar"
        android:id="@+id/layout_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:id="@+id/card_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">


            <RelativeLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.v7.widget.CardView
                    android:id="@+id/card_next_appointment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="12dp">

                    <RelativeLayout
                        android:padding="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/appointment_card_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/msg_next_appointment"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:layout_below="@+id/appointment_card_title"
                            android:padding="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/layout_no_appointment">

                            <TextView
                                android:textAlignment="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/msg_no_appointments_today"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_below="@+id/appointment_card_title"
                            android:id="@+id/layout_appointment"
                            android:layout_centerInParent="true"
                            android:paddingRight="16dp"
                            android:paddingLeft="16dp"
                            android:paddingTop="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="72dp"
                            android:orientation="horizontal">


                            <RelativeLayout
                                android:id="@+id/layout_list_calendar_period"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@drawable/circle_appointment"
                                android:gravity="center">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
                                    android:text="8"
                                    android:gravity="center"
                                    android:id="@+id/text_list_period"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerInParent="true" />
                            </RelativeLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle=""
                                android:text="Geen gegevens"
                                android:id="@+id/text_lesson"
                                android:paddingLeft="50dp"
                                android:paddingRight="32dp"
                                android:layout_alignTop="@+id/layout_list_calendar_period"
                                android:layout_toRightOf="@+id/layout_list_calendar_period"
                                android:singleLine="true"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                                android:text="Geen gegevens"
                                android:id="@+id/text_classroom"
                                android:paddingLeft="50dp"
                                android:paddingRight="16dp"
                                android:singleLine="true"
                                android:textColor="@color/mi_text_color_secondary_light"
                                android:layout_below="@+id/text_lesson"
                                android:layout_toRightOf="@+id/layout_list_calendar_period"
                                android:layout_toEndOf="@+id/layout_list_calendar_period" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="Geen gegevens"
                                android:id="@+id/text_time"
                                android:layout_alignBottom="@+id/text_classroom"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentEnd="true"
                                android:singleLine="true"
                                android:textSize="12sp" />

                        </RelativeLayout>
                    </RelativeLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@id/card_new_grade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/card_next_appointment"
                    android:layout_margin="12dp"
                    android:layout_marginBottom="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/new_grade_card_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/msg_newest_grade"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:id="@+id/layout_circle_grade"
                            android:layout_width="140dp"
                            android:layout_height="140dp"
                            android:layout_below="@id/new_grade_card_title"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/circle_grade"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/grade"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerInParent="true"
                                android:gravity="center"
                                android:text="8.8"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
                                android:textSize="64sp" />
                        </RelativeLayout>

                        <TextView
                            android:id="@+id/subject"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/layout_circle_grade"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:text="Het vak"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                    </RelativeLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/card_schedulechanges"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/card_new_grade"
                    android:layout_margin="12dp"
                    android:layout_marginBottom="0dp">

                    <RelativeLayout
                        android:id="@+id/card_schedulechanges_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/schedulechange_card_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/msg_upcoming_changes"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <RelativeLayout
                            android:id="@+id/layout_no_schedule_changes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/schedulechange_card_title"
                            android:padding="16dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/msg_no_upcoming_schedulechanges"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                        </RelativeLayout>


                        <RelativeLayout
                            android:layout_marginTop="32dp"
                            android:id="@+id/layout_schedule_changes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="horizontal">

                            <ListView
                                android:id="@+id/list_scheduleChanges"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />
                        </RelativeLayout>
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </RelativeLayout>
        </ScrollView>

    </com.z3r0byte.magistify.GUI.ScrollRefreshLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_1_ad_unit_id" />

</RelativeLayout>
